[metadata]
name = extrarandom
version = 1.0.2
author = tovicheung
url = https://github.com/tovicheung/extrarandom
description = More random utils
long_description = file: README.md
long_description_content_type = text/markdown
keywords = random
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11